--- a/generatePi.html
+++ b/generatePi.html
@@ -139,9 +139,9 @@
 
     <!-- Content Section Starts Here -->
     <div class="bg-grey-eight px-4 py-2 mb-18">
-      <div class="grid grid-cols-3 gap-3">
+      <div class="grid grid-cols-2 xl:grid-cols-3 gap-3">
         <!-- Import your car grid -->
-        <div class="col-span-2">
+        <div class="xl:col-span-2">
           <p class="text-[24px] text-grey-two font-bold">Import Your Car</p>
           <p class="text-base text-grey-two font-normal">
             Fast. Reliable. Hassle-Free Vehicle Shipping.
@@ -606,6 +606,227 @@
                 </div>
 
                 <!-- Additional Options and Government Requirements Ends Here -->
+
+                <!-- Special UAE Table Starts here -->
+
+                <table
+                  class="w-full text-left border-separate border-spacing-y-2"
+                >
+                  <thead>
+                    <tr
+                      class="text-sm md:text-[15px] text-grey-two bg-[#fafafa] rounded drop-shadow-[#0000000f]"
+                    >
+                      <th class="px-2 py-3 font-semibold">Arrival port</th>
+                      <th class="px-2 py-3 font-semibold">Destination</th>
+                      <th class="px-2 py-3 font-semibold">Service Details</th>
+                      <!-- <th class="px-2 py-3 font-semibold">Delivery Price</th> -->
+                      <th class="px-2 py-3 font-semibold">Total Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="align-top">
+                      <td
+                        class="px-2 py-2 font-normal align-middle text-base border-b border-b-grey-six"
+                        rowspan="2"
+                      >
+                        Jabel Ali
+                      </td>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            checked
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm"
+                            >JEBEL ALI (port)</span
+                          >
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        Pick up at port (RORO)
+                      </td>
+                      <td
+                        class="px-2 py-2 font-bold text-red-500 text-sm border-b border-b-grey-six"
+                      >
+                        AED 250,253
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm"
+                            >JEBEL ALI (port)</span
+                          >
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        pick up at port (Container)
+                      </td>
+                      <td
+                        class="px-2 py-2 text-left font-bold text-grey-two text-sm border-b border-b-grey-six"
+                      >
+                        AED 274,250
+                      </td>
+                    </tr>
+
+                    <!-- Abu Dhabi Port Starts here -->
+                    <tr class="align-top">
+                      <td
+                        class="px-2 py-2 font-normal align-middle text-base border-b border-b-grey-six"
+                        rowspan="2"
+                      >
+                        Abu Dhabi
+                      </td>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            checked
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm"
+                            >ABU DHABI (port)</span
+                          >
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        Pick up at port (RORO)
+                      </td>
+                      <td
+                        class="px-2 py-2 font-bold text-red-500 text-sm border-b border-b-grey-six"
+                      >
+                        AED 257,153
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm"
+                            >ABU DHABI (port)</span
+                          >
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        pick up at port (Container)
+                      </td>
+                      <td
+                        class="px-2 py-2 text-left font-bold text-grey-two text-sm border-b border-b-grey-six"
+                      >
+                        AED 301,854
+                      </td>
+                    </tr>
+                    <!-- Abu Dhabi Port Ends here -->
+
+                    <!-- Dubai Port Starts here -->
+                    <tr class="align-top">
+                      <td
+                        class="px-2 py-2 font-normal align-middle text-base border-b border-b-grey-six"
+                        rowspan="2"
+                      >
+                        Dubai
+                      </td>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            checked
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm">Dubai (port)</span>
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        Pick up at port (RORO)
+                      </td>
+                      <td
+                        class="px-2 py-2 font-bold text-grey-two text-sm border-b border-b-grey-six"
+                      >
+                        ASK
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="px-2 py-2 border-b border-b-grey-six">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                          <input
+                            type="radio"
+                            name="iquique-option"
+                            class="accent-primary-color"
+                          />
+                          <span class="font-light text-sm">Dubai (port)</span>
+                        </label>
+                      </td>
+                      <td
+                        class="px-2 py-2 text-sm font-light border-b border-b-grey-six"
+                      >
+                        pick up at port (Container)
+                      </td>
+                      <td
+                        class="px-2 py-2 text-left font-bold text-grey-two text-sm border-b border-b-grey-six"
+                      >
+                        ASK
+                      </td>
+                    </tr>
+                    <!-- Dubai Port Ends here -->
+                  </tbody>
+                </table>
+
+                <!-- Special USE Table ends here -->
+
+                <!-- Additional Options of UAE Starts here -->
+
+                <div class="flex flex-wrap gap-y-2">
+                  <div class="mt-3 w-full lg:w-1/2">
+                    <p class="font-semibold text-grey-two text-xl">
+                      Additional Options
+                    </p>
+                    <label class="custom-checkbox" for="piMarineInsuranceUAE">
+                      <input type="checkbox" id="piMarineInsuranceUAE" />
+                      <span class="checkmark"></span>
+                      Marine Insurance
+                    </label>
+                    <label class="custom-checkbox" for="piOtozWarrentyUAE">
+                      <input type="checkbox" id="piOtozWarrentyUAE" />
+                      <span class="checkmark"></span>
+                      Otoz.ai Warranty
+                    </label>
+                    <p class="text-xs mt-1 font-normal text-red-500">
+                      Otoz.ai warranty is USD 80 per vehicle
+                    </p>
+                  </div>
+                </div>
+
+                <div class="flex justify-between px-4 bg-[#1735590d] mt-2 py-2">
+                  <p class="text-grey-two text-xl font-semibold">Total Price</p>
+                  <p class="text-grey-two text-xl font-semibold">
+                    CIF <span class="pl-2 text-red-600 fontbo">AED 72,646</span>
+                  </p>
+                </div>
+
+                <!-- Additional Options of UAE Ends Here -->
               </div>
             </div>
 
@@ -626,7 +847,9 @@
 
         <!-- Simple Estimate and Advanced Estimate ends here  -->
 
-        <div class="py-2 px-3 border border-grey-seven bg-white rounded">
+        <div
+          class="py-2 px-3 border border-grey-seven bg-white rounded col-span-2 xl:col-span-1"
+        >
           <p class="text-grey-two font-medium">Discounts</p>
           <div
             class="border border-yellow-400 bg-[#f6bb3b1a] px-2 rounded mt-1"
